--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>YouTube</title>
+    <link rel = "icon" type = "images/png" href = "images/youtube-icon.png">
+    <link rel = "stylesheet" href = "css/style.css" type = "text/css">
 </head>
 <body>
-    <h1>cloYou Tube</h1>
+    <h1>You Tube</h1>
+    <button id = "btn">subscribe</button>
+    <script src = "js/main.js"></script>
 </body>
 </html>
