added some divs

--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <title>YouTube</title>
     <link rel = "icon" type = "images/png" href = "images/youtube-icon.png">
     <link rel = "stylesheet" href = "css/style.css" type = "text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 <body>
-    <h1>You Tube</h1>
-    <button id = "btn">subscribe</button>
-    <script src = "js/main.js"></script>
+    <div class = "header">
+        <div class = "header__left">
+            <i id = "menu" class = "material-icons">menu</i>
+            <img style = "width:70px;" src="https://www.xda-developers.com/files/2017/08/After-12-Years-Google-Gives-YouTube-a-New-Logo-1900x700_c.png">
+        </div>
+        <div class = "header__search">
+            <form action="">
+                <input type = "text" placeholder="Search">
+                <button><i class="material-icons">search</i></button>
+            </form>
+        </div>
+
+        <div class="header__icon">
+            
+        </div>
+    </div>
 </body>
 </html>
