--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class = "header">
         <div class = "header__left">
             <i id = "menu" class = "material-icons">menu</i>
-            <img style = "width:70px;" src="https://www.xda-developers.com/files/2017/08/After-12-Years-Google-Gives-YouTube-a-New-Logo-1900x700_c.png">
+            <img src="https://www.xda-developers.com/files/2017/08/After-12-Years-Google-Gives-YouTube-a-New-Logo-1900x700_c.png">
         </div>
         <div class = "header__search">
             <form action="">
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
